--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -24,13 +24,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wHgP8RzpI_0Q"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
@@ -118,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -224,7 +217,14 @@
         "print(df_day.dtypes)\n",
         "\n",
         "print(\"\\nTipe data hour.csv:\")\n",
-        "print(df_hour.dtypes)"
+        "print(df_hour.dtypes)\n",
+        "\n",
+        "# Cek duplicate data\n",
+        "print(\"\\nJumlah baris duplikat di day.csv:\")\n",
+        "print(df_day.duplicated().sum())\n",
+        "\n",
+        "print(\"\\nJumlah baris duplikat di hour.csv:\")\n",
+        "print(df_hour.duplicated().sum())"
       ]
     },
     {
@@ -235,7 +235,8 @@
       "source": [
         "**Insight:**\n",
         "- Tidak ada missing values di kedua dataset.\n",
-        "- Kolom dteday di day.csv dan hour.csv masih bertipe object dan perlu diubah ke datetime."
+        "- Kolom dteday di day.csv dan hour.csv masih bertipe object dan perlu diubah ke datetime.\n",
+        "- Tidak ditemukan baris duplikat di dataset day.csv dan hour.csv. Semua data unik dan tidak ada duplikasi."
       ]
     },
     {
@@ -249,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "jVnYpprE9Evz"
       },
@@ -320,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -385,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -490,6 +491,33 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Insight:**\n",
+        "Grafik di atas menunjukkan pola rata-rata penyewaan sepeda per jam dalam sehari. Berikut adalah beberapa poin penting dari visualisasi ini:\n",
+        "\n",
+        "\n",
+        "1. Pola Harian Penyewaan Sepeda:\n",
+        "* Terdapat dua puncak (peak hours) yang jelas dalam grafik, yaitu pada jam 8 pagi dan jam 5 sore .\n",
+        "* Hal ini sesuai dengan pola aktivitas harian masyarakat, di mana banyak orang menggunakan sepeda untuk berangkat kerja atau sekolah di pagi hari dan pulang ke rumah di sore hari.\n",
+        "\n",
+        "2. Highlight Peak Hours:\n",
+        "* Jam 8 Pagi (Garis Merah): Menunjukkan lonjakan pertama dalam jumlah penyewaan sepeda. Ini kemungkinan besar terkait dengan aktivitas komuter pagi hari.\n",
+        "* Jam 5 Sore (Garis Hijau): Menunjukkan lonjakan kedua, yang mencerminkan aktivitas pulang kerja atau sekolah. Lonjakan ini cenderung lebih tinggi dibandingkan pagi hari, mungkin karena kombinasi faktor seperti cuaca yang lebih nyaman di sore hari atau peningkatan aktivitas rekreasi setelah jam kerja.\n",
+        "\n",
+        "3. Penurunan Aktivitas di Malam Hari:\n",
+        "* Setelah pukul 6 sore , jumlah penyewaan sepeda mulai menurun secara signifikan. Ini menunjukkan bahwa aktivitas penyewaan sepeda sangat dipengaruhi oleh rutinitas harian dan waktu luang masyarakat.\n",
+        "* Pada malam hari (setelah pukul 9 malam ), jumlah penyewaan mendekati nol, mengindikasikan bahwa sebagian besar orang tidak menggunakan sepeda untuk aktivitas malam hari.\n",
+        "\n",
+        "4. Rekomendasi Bisnis:\n",
+        "* Berdasarkan pola ini, penyedia layanan penyewaan sepeda dapat memastikan ketersediaan sepeda yang cukup di stasiun-stasiun utama selama jam sibuk (pagi dan sore).\n",
+        "* Strategi promosi atau diskon dapat diterapkan di luar jam sibuk untuk meningkatkan penggunaan sepeda di waktu-waktu non-peak."
+      ],
+      "metadata": {
+        "id": "uBoOUfCJSlfD"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "DgHI7CiU8DC2"
       },
@@ -535,8 +563,27 @@
       },
       "source": [
         "**Insight:**\n",
-        "- Cuaca cerah (kode 1) → Penyewaan tinggi, terutama saat suhu > 0.5.\n",
-        "- Cuaca hujan/salju (kode 2 - 3) → Penyewaan menurun."
+        "Grafik scatterplot di atas menunjukkan hubungan antara suhu (suhu) dan total penyewaan sepeda (total_sewa), dengan warna yang merepresentasikan kondisi cuaca (cuaca). Berikut adalah beberapa poin penting dari visualisasi ini:\n",
+        "\n",
+        "1. Pengaruh Suhu terhadap Penyewaan Sepeda:\n",
+        "* Terlihat bahwa semakin tinggi suhu, jumlah penyewaan sepeda cenderung meningkat. Hal ini menunjukkan bahwa cuaca yang lebih hangat lebih disukai oleh pengguna sepeda.\n",
+        "* Namun, pada suhu yang terlalu tinggi (mendekati batas maksimum), jumlah penyewaan mulai menurun. Ini bisa disebabkan oleh ketidaknyamanan akibat panas yang berlebih.\n",
+        "\n",
+        "2. Pengaruh Cuaca terhadap Penyewaan Sepeda:\n",
+        "\n",
+        "Kondisi cuaca memainkan peran penting dalam jumlah penyewaan sepeda\n",
+        "* Cuaca cerah (ditandai dengan warna tertentu) memiliki jumlah penyewaan tertinggi di berbagai rentang suhu.\n",
+        "* Cuaca mendung atau hujan ringan (warna lain) menunjukkan penurunan jumlah penyewaan dibandingkan cuaca cerah.\n",
+        "* Cuaca buruk seperti hujan lebat (warna lainnya) memiliki jumlah penyewaan paling rendah, bahkan pada suhu yang nyaman.\n",
+        "\n",
+        "3. Kesimpulan Umum:\n",
+        "* Faktor suhu dan cuaca secara bersama-sama mempengaruhi jumlah penyewaan sepeda.\n",
+        "* Cuaca cerah dengan suhu sedang hingga hangat adalah kondisi ideal untuk penyewaan sepeda.\n",
+        "* Penyedia layanan penyewaan sepeda dapat memanfaatkan wawasan ini untuk mengoptimalkan ketersediaan sepeda selama hari-hari dengan cuaca cerah dan suhu nyaman.\n",
+        "\n",
+        "4. Rekomendasi Bisnis:\n",
+        "* Promosikan layanan penyewaan sepeda lebih intensif pada hari-hari dengan prediksi cuaca cerah dan suhu hangat.\n",
+        "* Pertimbangkan untuk memberikan diskon atau insentif pada hari-hari dengan cuaca kurang ideal (misalnya, mendung atau hujan ringan) untuk mendorong penggunaan sepeda."
       ]
     },
     {
@@ -595,7 +642,43 @@
       },
       "source": [
         "**Insight:**\n",
-        "- Hari dengan recency rendah (baru-baru ini) cenderung punya frequency & monetary tinggi ."
+        "Grafik pairplot di atas menunjukkan hubungan antara tiga dimensi utama dalam analisis RFM (Recency, Frequency, dan Monetary) untuk setiap hari penyewaan sepeda. Berikut adalah beberapa poin penting dari visualisasi ini:\n",
+        "\n",
+        "1. Recency (Keterkinian):\n",
+        "\n",
+        "Definisi: Mengukur berapa hari yang telah berlalu sejak hari terakhir penyewaan pada tanggal tersebut.\n",
+        "\n",
+        "Pola yang tampak :\n",
+        "* Hari-hari dengan nilai Recency rendah (mendekati 0) menunjukkan bahwa penyewaan terjadi sangat dekat dengan hari terakhir dataset (hari terbaru). Ini mencerminkan aktivitas penyewaan yang baru saja terjadi.\n",
+        "* Hari-hari dengan nilai Recency tinggi menunjukkan bahwa tidak ada aktivitas penyewaan sepeda dalam waktu lama.\n",
+        "\n",
+        "2. Frequency (Frekuensi):\n",
+        "\n",
+        "Definisi: Menghitung berapa kali penyewaan terjadi pada hari tertentu.\n",
+        "\n",
+        "Pola yang tampak :\n",
+        "* Beberapa hari memiliki frekuensi penyewaan yang sangat tinggi, yang mungkin berkaitan dengan faktor seperti cuaca cerah, akhir pekan, atau hari libur.\n",
+        "* Hari-hari dengan frekuensi rendah bisa jadi karena kondisi cuaca buruk, hari kerja biasa, atau faktor lain yang mengurangi minat penyewaan.\n",
+        "\n",
+        "3. Monetary (Nilai Moneter):\n",
+        "\n",
+        "Definisi: Total pendapatan yang dihasilkan dari penyewaan sepeda pada hari tertentu.\n",
+        "\n",
+        "Pola yang tampak :\n",
+        "* Ada korelasi positif antara Frequency dan Monetary , yaitu semakin sering penyewaan terjadi, semakin besar total pendapatan yang dihasilkan.\n",
+        "* Hari-hari dengan nilai Monetary tinggi cenderung menjadi hari-hari dengan aktivitas penyewaan yang intens, seperti akhir pekan atau musim liburan.\n",
+        "\n",
+        "4. Hubungan Antar Variabel:\n",
+        "\n",
+        "Recency vs. Frequency:\n",
+        "* Hari-hari dengan Recency rendah cenderung memiliki Frequency tinggi , yang menunjukkan bahwa hari-hari terbaru dalam dataset memiliki aktivitas penyewaan yang lebih intens.\n",
+        "* Sebaliknya, hari-hari dengan Recency tinggi memiliki Frequency rendah , menunjukkan kurangnya aktivitas penyewaan pada periode tersebut.\n",
+        "\n",
+        "Recency vs. Monetary:\n",
+        "* Ada kecenderungan bahwa hari-hari dengan Recency rendah juga memiliki Monetary tinggi , menunjukkan bahwa hari-hari terbaru memiliki kontribusi pendapatan yang signifikan.\n",
+        "\n",
+        "Frequency vs. Monetary:\n",
+        "* Korelasi kuat antara Frequency dan Monetary menunjukkan bahwa semakin banyak penyewaan terjadi, semakin besar pendapatan yang dihasilkan."
       ]
     },
     {
@@ -613,9 +696,27 @@
         "id": "ZTcyR48Y8DC2"
       },
       "source": [
-        "- Penyewaan sepeda paling sibuk di jam 8 pagi dan 5-6 sore → Saran: Tambah stok sepeda di waktu ini.\n",
-        "- Suhu tinggi meningkatkan penyewaan, sementara cuaca buruk (hujan/salju) mengurangi minat.\n"
+        "**Pola Penyewaan Sepeda Per Jam:**\n",
+        "\n",
+        "- Penyewaan sepeda mencapai puncak pada jam 8 pagi dan jam 5 sore , yang sesuai dengan aktivitas komuter harian (pergi dan pulang kerja/sekolah). Aktivitas penyewaan menurun drastis setelah jam 9 malam, menunjukkan bahwa sepeda lebih banyak digunakan untuk kebutuhan rutin di siang hari.\n",
+        "\n",
+        "**Hubungan Suhu dan Cuaca terhadap Penyewaan:**\n",
+        "\n",
+        "- Penyewaan meningkat pada suhu sedang hingga hangat (sekitar 20°C–30°C) dan cuaca cerah. Sebaliknya, cuaca buruk (hujan lebat atau mendung) serta suhu ekstrem (terlalu dingin atau panas) mengurangi minat penyewaan. Ini menunjukkan bahwa kondisi lingkungan sangat memengaruhi preferensi pengguna.\n",
+        "\n",
+        "**Analisis RFM (Recency, Frequency, Monetary):**\n",
+        "\n",
+        "- Hari-hari dengan Recency rendah (hari terbaru) memiliki frekuensi dan nilai moneter yang tinggi, menunjukkan bahwa aktivitas penyewaan lebih intens pada periode terakhir. Hal ini dapat digunakan untuk mengidentifikasi hari-hari penting yang memberikan dampak besar pada pendapatan bisnis."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oDROjHm_abq_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
