Final notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -572,14 +572,18 @@
         "2. Pengaruh Cuaca terhadap Penyewaan Sepeda:\n",
         "\n",
         "Kondisi cuaca memainkan peran penting dalam jumlah penyewaan sepeda\n",
-        "* Cuaca cerah (ditandai dengan cerah) memiliki jumlah penyewaan tertinggi di berbagai rentang suhu.\n",
-        "* Cuaca mendung atau hujan ringan (warna ungu) menunjukkan penurunan jumlah penyewaan dibandingkan cuaca cerah.\n",
-        "* Cuaca buruk seperti hujan lebat (warna hitam) memiliki jumlah penyewaan paling rendah, bahkan pada suhu yang nyaman.\n",
+        "* Cuaca cerah (ditandai dengan warna tertentu) memiliki jumlah penyewaan tertinggi di berbagai rentang suhu.\n",
+        "* Cuaca mendung atau hujan ringan (warna lain) menunjukkan penurunan jumlah penyewaan dibandingkan cuaca cerah.\n",
+        "* Cuaca buruk seperti hujan lebat (warna lainnya) memiliki jumlah penyewaan paling rendah, bahkan pada suhu yang nyaman.\n",
         "\n",
         "3. Kesimpulan Umum:\n",
         "* Faktor suhu dan cuaca secara bersama-sama mempengaruhi jumlah penyewaan sepeda.\n",
         "* Cuaca cerah dengan suhu sedang hingga hangat adalah kondisi ideal untuk penyewaan sepeda.\n",
         "* Penyedia layanan penyewaan sepeda dapat memanfaatkan wawasan ini untuk mengoptimalkan ketersediaan sepeda selama hari-hari dengan cuaca cerah dan suhu nyaman.\n",
+        "\n",
+        "4. Rekomendasi Bisnis:\n",
+        "* Promosikan layanan penyewaan sepeda lebih intensif pada hari-hari dengan prediksi cuaca cerah dan suhu hangat.\n",
+        "* Pertimbangkan untuk memberikan diskon atau insentif pada hari-hari dengan cuaca kurang ideal (misalnya, mendung atau hujan ringan) untuk mendorong penggunaan sepeda."
       ]
     },
     {
