--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,7 +6,7 @@
         "id": "H9wADwK78DCz"
       },
       "source": [
-        "# Proyek Analisis Data: [Input Nama Dataset]\n",
+        "# Proyek Analisis Data: [Bike Sharing Dataset]\n",
         "- **Nama:** [Wahyu Pelita Jaya]\n",
         "- **Email:** [wahyupelitajaya1@gmail.com]\n",
         "- **ID Dicoding:** [wahyupj]"
