--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2757,12 +2757,12 @@
         "day_df.head()"
       ],
       "metadata": {
-        "id": "VaQG3XfcJyBl",
-        "outputId": "efeeaec1-6564-4bb6-a5ee-64ad5838702a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "VaQG3XfcJyBl",
+        "outputId": "efeeaec1-6564-4bb6-a5ee-64ad5838702a"
       },
       "execution_count": 17,
       "outputs": [
@@ -3146,11 +3146,11 @@
         "day_df.info()"
       ],
       "metadata": {
-        "id": "HRWsZ-w1F8NX",
-        "outputId": "b0b6b6dd-099a-41cc-998d-425072c6eda1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HRWsZ-w1F8NX",
+        "outputId": "b0b6b6dd-099a-41cc-998d-425072c6eda1"
       },
       "execution_count": 18,
       "outputs": [
@@ -3220,12 +3220,12 @@
         "hour_df.head()"
       ],
       "metadata": {
-        "id": "mBnIFqpmGqCx",
-        "outputId": "81422fd7-1d8f-4150-e427-42e99c967b58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "mBnIFqpmGqCx",
+        "outputId": "81422fd7-1d8f-4150-e427-42e99c967b58"
       },
       "execution_count": 19,
       "outputs": [
@@ -3806,12 +3806,12 @@
         "hour_df.head()"
       ],
       "metadata": {
-        "id": "jNveq6u2OUxF",
-        "outputId": "2c54ea46-4416-4a06-eeb8-9e5f00f45c61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "jNveq6u2OUxF",
+        "outputId": "2c54ea46-4416-4a06-eeb8-9e5f00f45c61"
       },
       "execution_count": 26,
       "outputs": [
@@ -4201,11 +4201,11 @@
         "hour_df.info()"
       ],
       "metadata": {
-        "id": "FN4sL-XVOi--",
-        "outputId": "7a49ce91-b493-410b-80db-e5827c5a42a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FN4sL-XVOi--",
+        "outputId": "7a49ce91-b493-410b-80db-e5827c5a42a2"
       },
       "execution_count": 27,
       "outputs": [
@@ -4290,12 +4290,12 @@
         "})"
       ],
       "metadata": {
-        "id": "43Rss_HFuT4V",
-        "outputId": "1f097776-9e1c-473e-d003-b2b952c8fddb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
-        }
+        },
+        "id": "43Rss_HFuT4V",
+        "outputId": "1f097776-9e1c-473e-d003-b2b952c8fddb"
       },
       "execution_count": 28,
       "outputs": [
@@ -4693,12 +4693,12 @@
         "})"
       ],
       "metadata": {
-        "id": "ACSHflpek4do",
-        "outputId": "b2ec959f-e3cd-4bbb-81fd-10835d306e6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "ACSHflpek4do",
+        "outputId": "b2ec959f-e3cd-4bbb-81fd-10835d306e6f"
       },
       "execution_count": 30,
       "outputs": [
@@ -5075,12 +5075,12 @@
         "}).sort_values([('total', 'sum')], ascending = False)"
       ],
       "metadata": {
-        "id": "a94HsKj1vrnJ",
-        "outputId": "1bc7b8b8-812a-4c93-a1e1-22039ea5fd8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        }
+        },
+        "id": "a94HsKj1vrnJ",
+        "outputId": "1bc7b8b8-812a-4c93-a1e1-22039ea5fd8a"
       },
       "execution_count": 32,
       "outputs": [
@@ -5545,12 +5545,12 @@
         "})"
       ],
       "metadata": {
-        "id": "IWpSjmQ9FP_J",
-        "outputId": "20659daa-f1d7-4e5c-b0e8-075d5bdbb569",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "IWpSjmQ9FP_J",
+        "outputId": "20659daa-f1d7-4e5c-b0e8-075d5bdbb569"
       },
       "execution_count": 35,
       "outputs": [
@@ -5917,12 +5917,12 @@
         "})"
       ],
       "metadata": {
-        "id": "32tdmPO2ydSc",
-        "outputId": "49027412-d282-4173-d4d9-18cad1727c51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 864
-        }
+        },
+        "id": "32tdmPO2ydSc",
+        "outputId": "49027412-d282-4173-d4d9-18cad1727c51"
       },
       "execution_count": 33,
       "outputs": [
@@ -6636,53 +6636,8 @@
         "id": "HZxOiQ6n8DC2"
       },
       "source": [
-        "### Pertanyaan 1: Pola penyewaan per jam untuk mengetahui untuk memahami waktu-waktu sibuk."
+        "### Pertanyaan 1: Apakah musim memiliki pengaruh terhadap perilaku penyewaan sepeda?"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "1swJUdAD8DC2"
-      },
-      "outputs": [],
-      "source": [
-        "# Visualisasi dengan lineplot + highlight peak hour\n",
-        "plt.figure(figsize=(12,6))\n",
-        "sns.lineplot(x='jam', y='total_sewa', data=df_hour.groupby('jam').mean().reset_index())\n",
-        "plt.axvline(x=8, color='r', linestyle='--', label='Jam 8 Pagi')\n",
-        "plt.axvline(x=17, color='g', linestyle='--', label='Jam 5 Sore')\n",
-        "plt.title('Pola Penyewaan Sepeda per Jam (Highlight Peak)')\n",
-        "plt.legend()\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Insight:**\n",
-        "Grafik di atas menunjukkan pola rata-rata penyewaan sepeda per jam dalam sehari. Berikut adalah beberapa poin penting dari visualisasi ini:\n",
-        "\n",
-        "\n",
-        "1. Pola Harian Penyewaan Sepeda:\n",
-        "* Terdapat dua puncak (peak hours) yang jelas dalam grafik, yaitu pada jam 8 pagi dan jam 5 sore .\n",
-        "* Hal ini sesuai dengan pola aktivitas harian masyarakat, di mana banyak orang menggunakan sepeda untuk berangkat kerja atau sekolah di pagi hari dan pulang ke rumah di sore hari.\n",
-        "\n",
-        "2. Highlight Peak Hours:\n",
-        "* Jam 8 Pagi (Garis Merah): Menunjukkan lonjakan pertama dalam jumlah penyewaan sepeda. Ini kemungkinan besar terkait dengan aktivitas komuter pagi hari.\n",
-        "* Jam 5 Sore (Garis Hijau): Menunjukkan lonjakan kedua, yang mencerminkan aktivitas pulang kerja atau sekolah. Lonjakan ini cenderung lebih tinggi dibandingkan pagi hari, mungkin karena kombinasi faktor seperti cuaca yang lebih nyaman di sore hari atau peningkatan aktivitas rekreasi setelah jam kerja.\n",
-        "\n",
-        "3. Penurunan Aktivitas di Malam Hari:\n",
-        "* Setelah pukul 6 sore , jumlah penyewaan sepeda mulai menurun secara signifikan. Ini menunjukkan bahwa aktivitas penyewaan sepeda sangat dipengaruhi oleh rutinitas harian dan waktu luang masyarakat.\n",
-        "* Pada malam hari (setelah pukul 9 malam ), jumlah penyewaan mendekati nol, mengindikasikan bahwa sebagian besar orang tidak menggunakan sepeda untuk aktivitas malam hari.\n",
-        "\n",
-        "4. Rekomendasi Bisnis:\n",
-        "* Berdasarkan pola ini, penyedia layanan penyewaan sepeda dapat memastikan ketersediaan sepeda yang cukup di stasiun-stasiun utama selama jam sibuk (pagi dan sore).\n",
-        "* Strategi promosi atau diskon dapat diterapkan di luar jam sibuk untuk meningkatkan penggunaan sepeda di waktu-waktu non-peak."
-      ],
-      "metadata": {
-        "id": "uBoOUfCJSlfD"
-      }
     },
     {
       "cell_type": "markdown",
@@ -6690,68 +6645,25 @@
         "id": "DgHI7CiU8DC2"
       },
       "source": [
-        "### Pertanyaan 2: pengaruh faktor cuaca terhadap jumlah penyewaan sepeda"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Go0lCsvO8DC2"
-      },
-      "outputs": [],
-      "source": [
-        "# Scatterplot 1: Hubungan antara suhu & cuaca dengan total penyewaan\n",
-        "plt.figure(figsize=(18, 6))\n",
-        "\n",
-        "plt.subplot(1, 3, 1)  # 1 baris, 3 kolom, plot pertama\n",
-        "sns.scatterplot(x='suhu', y='total_sewa', hue='cuaca', data=df_day)\n",
-        "plt.title('Pengaruh Suhu dan Cuaca terhadap Penyewaan')\n",
-        "plt.xlabel('Suhu (°C)')\n",
-        "plt.ylabel('Total Penyewaan Sepeda')\n",
-        "\n",
-        "# Scatterplot 2: Hubungan antara kelembapan dengan total penyewaan\n",
-        "plt.subplot(1, 3, 2)  # 1 baris, 3 kolom, plot kedua\n",
-        "sns.scatterplot(x='kelembaban', y='total_sewa', hue='cuaca', data=df_day)\n",
-        "plt.title('Pengaruh Kelembapan terhadap Penyewaan')\n",
-        "plt.xlabel('Kelembapan (%)')\n",
-        "plt.ylabel('Total Penyewaan Sepeda')\n",
-        "\n",
-        "# Scatterplot 3: Hubungan antara kecepatan angin dengan total penyewaan\n",
-        "plt.subplot(1, 3, 3)  # 1 baris, 3 kolom, plot ketiga\n",
-        "sns.scatterplot(x='kecepatan_angin', y='total_sewa', hue='cuaca', data=df_day)\n",
-        "plt.title('Pengaruh Kecepatan Angin terhadap Penyewaan')\n",
-        "plt.xlabel('Kecepatan Angin (km/h)')\n",
-        "plt.ylabel('Total Penyewaan Sepeda')\n",
-        "\n",
-        "# Tampilkan semua plot\n",
-        "plt.tight_layout()\n",
-        "plt.show()"
+        "### Pertanyaan 2: Bagaimana pola penyewaan sepeda antara hari kerja dan hari libur?"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_0-36BDLklRg"
+        "id": "cCHd8ZHTQyKL"
       },
       "source": [
-        "**Insight:**\n",
-        "Grafik scatterplot di atas menunjukkan hubungan antara suhu, kelembaban, dan kecepatan angin terhadap total penyewaan sepeda. Berikut adalah beberapa poin penting dari visualisasi ini:\n",
-        "\n",
-        "1. Pengaruh Suhu terhadap Penyewaan :\n",
-        "* Suhu hangat (normalisasi > 0.6) cenderung meningkatkan jumlah penyewaan.\n",
-        "* Suhu dingin (normalisasi < 0.4) menyebabkan penurunan minat penyewaan.\n",
-        "* Pada musim panas, jumlah penyewaan cenderung lebih tinggi dibandingkan musim dingin.\n",
-        "\n",
-        "2. Pengaruh Kelembaban terhadap penyewaan :\n",
-        "* Kelembaban tinggi (> 70%) cenderung menurunkan minat penyewaan.\n",
-        "* Kelembaban rendah (< 50%) memberikan pengaruh positif pada jumlah penyewaan.\n",
-        "* Cuaca kering dan cerah lebih disukai oleh penyewa sepeda.\n",
-        "\n",
-        "3. Pengaruh Kecepatan Angin terhadap penyewaan :\n",
-        "* Angin sepoi-sepoi (kecepatan angin rendah) meningkatkan jumlah penyewaan.\n",
-        "* Angin kencang (> 0.2 skala normalisasi) menyebabkan penurunan jumlah penyewaan.\n",
-        "* Angin sepoi-sepoi membuat berkendara lebih nyaman, sehingga jumlah penyewaan meningkat."
+        "### Pertanyaan 3: Seperti apa dampak kondisi cuaca (weathersit, temp, hum, windspeed) terhadap jumlah pengguna sepeda."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xiBscw2IQyV6"
+      },
+      "source": [
+        "### Pertanyaan 4: Bagaimana pola penggunaan sepeda pada waktu-waktu sibuk berdasarkan jam?"
       ]
     },
     {
@@ -6760,44 +6672,7 @@
         "id": "9y4VUsmcYNZ5"
       },
       "source": [
-        "## Analisis Lanjutan : Manual Grouping\n",
-        "### Grouping Berdasarkan Hari Kerja vs Hari Libur"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iWhnzsJGYUCO"
-      },
-      "outputs": [],
-      "source": [
-        "# Tambahkan kolom untuk mengidentifikasi hari kerja atau libur\n",
-        "df_day['is_weekend'] = df_day['weekday'].isin([0, 6])  # 0 = Minggu, 6 = Sabtu\n",
-        "\n",
-        "# Hitung rata-rata total penyewaan berdasarkan hari kerja/libur\n",
-        "workday_analysis = df_day.groupby('is_weekend')['total_sewa'].mean().reset_index()\n",
-        "workday_analysis['is_weekend'] = workday_analysis['is_weekend'].map({False: \"Hari Kerja\", True: \"Hari Libur\"})\n",
-        "\n",
-        "# Visualisasi\n",
-        "plt.figure(figsize=(8, 5))\n",
-        "sns.barplot(x='is_weekend', y='total_sewa', data=workday_analysis)\n",
-        "plt.title(\"Rata-rata Penyewaan Sepeda Berdasarkan Hari Kerja/Libur\")\n",
-        "plt.xlabel(\"Hari\")\n",
-        "plt.ylabel(\"Rata-rata Jumlah Penyewaan\")\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WGl6z9_RLXcx"
-      },
-      "source": [
-        "**Insight:**\n",
-        "* Hari kerja memiliki jumlah penyewaan lebih tinggi sekitar 5% dibandingkan hari kerja.\n",
-        "* Pada hari kerja, orang cenderung menggunakan sepeda sebagai alat transportasi untuk ke kantor, sekolah, atau tempat lain yang bersifat rutin. Karena aktivitas ini bersifat rutin , jumlah penyewaan cenderung stabil tetapi tidak melonjak drastis.\n",
-        "* Pada hari libur, orang memiliki lebih banyak waktu luang dan sering menggunakan sepeda untuk rekreasi, olahraga, atau aktivitas sosial. Meskipun jumlah hari libur lebih sedikit, hal ini perlu di pertimbangkan juga mengingat intensitas penggunaan sepeda pada hari tersebut bisa lebih tinggi , sehingga rata-rata jumlah penyewaan menjadi lebih dekat dengan hari kerja."
+        "## Analisis Lanjutan : Manual Grouping"
       ]
     },
     {
@@ -6807,26 +6682,6 @@
       },
       "source": [
         "## Conclusion"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZTcyR48Y8DC2"
-      },
-      "source": [
-        "**Dataset ini menunjukkan bahwa pola penyewaan sepeda dipengaruhi oleh faktor-faktor seperti waktu (jam, hari kerja/libur), cuaca (suhu, kelembaban, kecepatan angin), dan perilaku pengguna (terdaftar vs biasa). Dengan memahami pola ini, bisnis dapat mengoptimalkan operasional, meningkatkan pendapatan, dan memberikan pengalaman yang lebih baik kepada pelanggan.**\n",
-        "\n",
-        "- **Action Plan untuk Implementasi**\n",
-        "1. Operasional:\n",
-        "* Pastikan stok sepeda cukup di jam-jam sibuk (pagi dan sore hari).\n",
-        "* Siapkan stasiun penyewaan tambahan di area strategis (perkantoran, sekolah, pusat rekreasi).\n",
-        "2. Pemasaran:\n",
-        "* Gunakan promosi berbasis cuaca untuk mendorong penyewaan saat cuaca kurang ideal.\n",
-        "* Fokus pada pengguna biasa dengan acara khusus akhir pekan.\n",
-        "3. Teknologi:\n",
-        "* Implementasikan sistem prediksi berbasis data untuk memperkirakan permintaan berdasarkan cuaca dan waktu.\n",
-        "* Gunakan dynamic pricing untuk memaksimalkan pendapatan selama periode permintaan tinggi.\n"
       ]
     }
   ],
